# port

./: .gitignore  README  build.sh
config/: FindDirectFB.cmake  FindEV.cmake  FindGingaLib.cmake  FindPthreads.cmake  Platform_PC.cmake  SetupGlobal.cmake  SetupUser.cmake  Tvd.cmake  Utils.cmake
dtv-connector/: config.h.cin  deps.cmake  sources.test.cmake
dtv-connector/src/: connector.cpp
dtv-connector/src/handler/: canvashandler.cpp  exitcommandhandler.cpp  keepalivehandler.cpp  keyeventhandler.cpp  keyregisterhandler.h  messagehandler.cpp  messagehandler.h  startcommandhandler.cpp  videoresizehandler.h
dtv-connector/test/src/: connector.cpp
dtv-layer/: CMakeLists.txt
dtv-util/: CMakeLists.txt  sources.cmake
dtv-util/src/: buffer.cpp  functions.cpp  keydefs.cpp  keydefs.h  resourcepool.cpp  taskqueue.h
ginga/: CMakeLists.txt  build.conf  config.h.cin  sources.cmake
gingacc-contextmanager/: config.h.cin
gingacc-contextmanager/test/: test.cpp
gingacc-ic/: sources.cmake
gingacc-ic/test/: test.cpp
gingacc-multidevice/: CMakeLists.txt
gingacc-multidevice/test/: test_active.cpp
gingacc-player/: CMakeLists.txt  config.h.cin
gingacc-player/include/: LinksPlayer.h
gingacc-player/src/application/imperative/lua/: LuaCanvas.cpp  LuaPlayer.cpp
gingacc-system/: CMakeLists.txt
gingacc-system/include/io/: IInputManager.h
gingacc-system/include/io/interface/device/dfb/: DFBDeviceScreen.h
gingacc-system/include/io/interface/input/dfb/: DFBGInputEvent.h
gingacc-system/include/io/interface/output/dfb/: DFBSurface.h
gingacc-system/include/util/mutex/: dfbsurfacemutex.h
gingacc-system/src/io/: InputManager.cpp  LocalDeviceManager.cpp
gingacc-system/src/io/interface/content/text/: DFBFontProvider.cpp
gingacc-system/src/io/interface/input/dfb/: DFBGInputEvent.cpp
gingalssm/: CMakeLists.txt
gingalssm/src/: PresentationEngineManager.cpp
lib/dtv-connector/: CMakeLists.txt  socket_config.h.in  sources.cmake
lib/dtv-connector/src/: connector.h  remote.cpp  remote.h
lib/dtv-connector/src/handler/: editingcommandhandler.cpp  editingcommandhandler.h  keyregisterhandler.cpp  videoresizehandler.cpp
lib/dtv-connector/test/src/: main.cpp  util.cpp
lib/dtv-layer/: sources.cmake  sources_PC.cmake
lib/dtv-layer/src/: layer.cpp  layer.h
lib/dtv-util/: deps.cmake  sources.test.cmake
lib/dtv-util/src/: buffer.h  fs.cpp  functions.h  string.cpp  string.h  taskqueue.cpp  types.h
lib/dtv-util/test/src/: buffer.cpp  types.cpp
lib/gingacc-contextmanager/: CMakeLists.txt  sources.cmake
lib/gingacc-ic/: CMakeLists.txt
lib/gingacc-multidevice/: config.h.cin  sources.cmake
lib/gingacc-multidevice/test/: test.cpp
lib/gingacc-player/: sources.cmake
lib/gingacc-player/include/: LuaPlayer.h  PlayersComponentSupport.h
lib/gingacc-player/src/application/declarative/xhtml/: LinksPlayer.cpp
lib/gingacc-player/src/video/: DummyConnector.cpp  mainavplayer.cpp
lib/gingacc-player/test/: test.cpp
lib/gingacc-system/: config.h.cin  sources.cmake
lib/gingacc-system/include/io/: InputManager.h
lib/gingacc-system/include/io/interface/input/: CodeMap.h
lib/gingacc-system/include/util/: Color.h  IColor.h
lib/gingacc-system/src/io/interface/content/audio/: FFmpegAudioProvider.cpp  FusionSoundAudioProvider.cpp
lib/gingacc-system/src/io/interface/content/video/: FFmpegVideoProvider.cpp  XineVideoProvider.cpp
lib/gingacc-system/src/io/interface/device/dfb/: DFBDeviceScreen.cpp
lib/gingacc-system/src/io/interface/input/: CodeMap.cpp
lib/gingacc-system/src/io/interface/output/dfb/: DFBSurface.cpp  DFBWindow.cpp
lib/gingacc-system/src/util/: Color.cpp
lib/gingacc-system/src/util/mutex/: dfbsurfacemutex.cpp
lib/gingacc-system/test/: test.cpp
lib/gingalssm/: config.h.cin  sources.cmake
lib/gingalssm/include/: PresentationEngineManager.h
lib/gingalssm/test/: test.cpp
lib/ncl30/: config.h.cin  sources.cmake
lib/ncl30-converter/: CMakeLists.txt
lib/ncl30-converter/test/: test.cpp
lib/ncl30-presenter/: config.h.cin  sources.cmake
lib/ncl30-presenter/src/animation/: AnimationController.cpp
lib/ncl30-presenter/src/focus/: FormatterFocusManager.cpp
lib/ncl30-presenter/src/model/link/: LinkCompoundAction.cpp
lib/ncl30-presenter/test/src/: editingcommands.cpp
lib/telemidia-links/: sources.cmake  telemidialinks.pc
ncl30/: CMakeLists.txt
ncl30-converter/: sources.cmake
ncl30-presenter/: CMakeLists.txt
ncl30-presenter/include/: editingcommandevents.h
ncl30-presenter/src/model/event/: FormatterEvent.cpp
ncl30-presenter/src/model/presentation/: FormatterRegion.cpp
ncl30-presenter/src/multidevice/: FormatterMultiDevice.cpp
ncl30-presenter/test/: test.cpp
telemidia-links/: CMakeLists.txt  Makefile.am  cfg.h  config.h  config.h.cin  configure.in  dither.c
tool/ginga/src/: main.cpp
