CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE($ENV{DEPOT}/config/Tvd.cmake)

SetIfEmpty(HAVE_COMPSUPPORT 0)
SetIfEmpty(SVN_REVISION 0)

find_package( GingaLib 0.11.0 REQUIRED lssm ncl-presenter ncl-converter ncl player multidevice ic contextmanager system telemidialinks layer connector util )
LIST(APPEND GINGA_LIBRARIES GINGALIB-LSSM GINGALIB-NCL-PRESENTER GINGALIB-NCL-CONVERTER GINGALIB-NCL GINGALIB-PLAYER GINGALIB-MULTIDEVICE GINGALIB-IC GINGALIB-CONTEXTMANAGER GINGALIB-SYSTEM GINGALIB-TELEMIDIALINKS GINGALIB-LAYER GINGALIB-CONNECTOR GINGALIB-UTIL )

find_package( JPEG REQUIRED )
LIST(APPEND GINGA_LIBRARIES JPEG )
 
find_package( PNG REQUIRED )
LIST(APPEND GINGA_LIBRARIES PNG )

find_package( DirectFB REQUIRED )
LIST(APPEND GINGA_LIBRARIES DIRECTFB )

find_package( FusionSound REQUIRED )
LIST(APPEND GINGA_LIBRARIES FUSIONSOUND )

OPTIONAL_FIND_PACKAGE( FFMPEG REQUIRED avformat avcodec )
IF(HAVE_FFMPEG)
	LIST(APPEND GINGA_LIBRARIES FFMPEG-AVFORMAT FFMPEG-AVCODEC )
ENDIF(HAVE_FFMPEG)

OPTIONAL_FIND_PACKAGE( Xine 0.1.0 )
LIST(APPEND GINGA_LIBRARIES XINE )

find_package( Boost 1.39.0 REQUIRED system filesystem thread )
LIST(APPEND GINGA_LIBRARIES Boost Boost-system Boost-filesystem Boost-thread)

find_package( Lua51 REQUIRED )
LIST(APPEND GINGA_LIBRARIES LUA )

find_package( CURL REQUIRED )
LIST(APPEND GINGA_LIBRARIES CURL )

find_package( XercesC REQUIRED )
LIST(APPEND GINGA_LIBRARIES XERCESC )

find_package( Pthreads REQUIRED )
LIST(APPEND GINGA_LIBRARIES PTHREADS )

# Workaround, to eliminate -rdynamic from the linker
SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
SET(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")

GET_BUILD_INFO(SVN_REVISION)

Add_Bin (
	PROJECT_NAME "ginga"
	PROJECT_DESCRIPTION "This is the Ginga main project."
	PROJECT_VERSION 1.3.0
	DEPENDENCIES ${GINGA_LIBRARIES}
	BIN_DESTINATION sbin
)

INSTALL(FILES src/ginga.version
        DESTINATION .
)

