CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE($ENV{DEPOT}/config/Tvd.cmake)

SetIfEmpty(HAVE_COMPSUPPORT 0)

SET(HAVE_CLOCKTIME 0)
OPTION_IF_EMPTY(WITH_CLOCKTIME "Build project using clock to player time" ON)
IF(WITH_CLOCKTIME) 
        SET(HAVE_CLOCKTIME 1)
ENDIF(WITH_CLOCKTIME) 

find_package( Boost 1.39.0 REQUIRED )
LIST(APPEND GINGAPLAYER_LIBRARIES Boost )

find_package( Lua51 REQUIRED )
LIST(APPEND GINGAPLAYER_LIBRARIES LUA )

find_package( DirectFB REQUIRED )
LIST(APPEND GINGAPLAYER_LIBRARIES DIRECTFB )

find_package( FusionSound REQUIRED )
LIST(APPEND GINGAPLAYER_LIBRARIES FUSIONSOUND )

find_package( GingaLib 0.11.0 REQUIRED util system connector telemidialinks )
LIST(APPEND GINGAPLAYER_LIBRARIES GINGALIB-UTIL GINGALIB-SYSTEM GINGALIB-CONNECTOR GINGALIB-TELEMIDIALINKS )

OPTIONAL_FIND_PACKAGE( FFMPEG REQUIRED avformat avcodec )
IF(HAVE_FFMPEG)
	LIST(APPEND GINGAPLAYER_LIBRARIES FFMPEG-AVFORMAT FFMPEG-AVCODEC )
ENDIF(HAVE_FFMPEG)

OPTIONAL_FIND_PACKAGE( Xine 0.1.0 )
LIST(APPEND GINGAPLAYER_LIBRARIES XINE )

find_package( Pthreads REQUIRED )
LIST(APPEND GINGAPLAYER_LIBRARIES PTHREADS )

FIND_PATH(DVC_INCLUDE_DIRS dvc.h PATH_SUFFIXES dvc)
IF(${DVC_INCLUDE_DIRS} MATCHES NOTFOUND)
    INCLUDE_DIRECTORIES ( ${GINGALIB-SYSTEM_INCLUDE_DIRS}/system/util/dvc${DIRECTFB_VERSION_MAJOR}${DIRECTFB_VERSION_MINOR} )
ENDIF(${DVC_INCLUDE_DIRS} MATCHES NOTFOUND)

Add_Lib (
	PROJECT_NAME "player"
	PROJECT_DESCRIPTION "This is the Ginga Player library project."
	PROJECT_VERSION 0.0.1.0
	DEPENDENCIES ${GINGAPLAYER_LIBRARIES}
)

# Install extra files
INSTALL( DIRECTORY files/scripts/
        DESTINATION share/lua/5.1
        FILES_MATCHING PATTERN "*.lua"
		PATTERN "*svn*" EXCLUDE
)

INSTALL(FILES 
        ${PROJECT_SOURCE_DIR}/files/images/pauseButton.png
        ${PROJECT_SOURCE_DIR}/files/images/playButton.png
        ${PROJECT_SOURCE_DIR}/files/images/stopButton.png
        DESTINATION share/ginga/img/button
)

INSTALL( DIRECTORY files/fonts/
        DESTINATION share/ginga/font
        FILES_MATCHING PATTERN "*.ttf"
		PATTERN "*svn*" EXCLUDE
)

