CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE($ENV{DEPOT}/config/Tvd.cmake)

SetIfEmpty(HAVE_COMPSUPPORT 0)

find_package( JPEG REQUIRED )
LIST(APPEND GINGASYSTEM_LIBRARIES JPEG )

find_package( PNG REQUIRED )
LIST(APPEND GINGASYSTEM_LIBRARIES PNG )

find_package( DirectFB REQUIRED )
LIST(APPEND GINGASYSTEM_LIBRARIES DIRECTFB )

find_package( FusionSound REQUIRED )
LIST(APPEND GINGASYSTEM_LIBRARIES FUSIONSOUND )

find_package( GingaLib 0.11.0 REQUIRED util connector )
LIST(APPEND GINGASYSTEM_LIBRARIES GINGALIB-UTIL GINGALIB-CONNECTOR GINGALIB-LAYER)

OPTIONAL_FIND_PACKAGE( FFMPEG REQUIRED avformat avcodec avutil )
IF(HAVE_FFMPEG)
	LIST(APPEND GINGASYSTEM_LIBRARIES FFMPEG-AVFORMAT FFMPEG-AVCODEC FFMPEG-AVUTIL )
ENDIF(HAVE_FFMPEG)

OPTIONAL_FIND_PACKAGE( Xine 0.1.0 )
LIST(APPEND GINGASYSTEM_LIBRARIES XINE )

find_package( Boost 1.39.0 REQUIRED system filesystem thread )
LIST(APPEND GINGASYSTEM_LIBRARIES Boost Boost-system Boost-filesystem Boost-thread)

find_package( Pthreads REQUIRED )
LIST(APPEND GINGASYSTEM_LIBRARIES PTHREADS )

# Define background color (RGBA)
SET ( BG_R 0xFF )
SET ( BG_G 0x00 )
SET ( BG_B 0xFF )
SET ( BG_A 0xFF ) # 0xFF=color key, 0x00=transparent bg

Add_Lib (
	PROJECT_NAME "system"
	PROJECT_DESCRIPTION "This is the Ginga System library project."
	PROJECT_VERSION 0.0.1.0
	DEPENDENCIES ${GINGASYSTEM_LIBRARIES}
)

# Install extra files
INSTALL(FILES ${PROJECT_SOURCE_DIR}/files/config/input.cfg
        DESTINATION ${CMAKE_CONFIG_INSTALL_PREFIX}/etc/ginga/system/config
)

