CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE($ENV{DEPOT}/config/Tvd.cmake)

SetIfEmpty(HAVE_COMPSUPPORT 0)

find_package( GingaLib 0.11.0 REQUIRED util system )
LIST(APPEND GINGANCL_LIBRARIES GINGALIB-UTIL GINGALIB-SYSTEM )

Add_Lib (
	PROJECT_NAME "ncl"
	PROJECT_DESCRIPTION "This is the NCL30 Ginga library." 
	PROJECT_VERSION 0.11.1.0
	DEPENDENCIES ${GINGANCL_LIBRARIES}
)

INSTALL( FILES
  ${PROJECT_SOURCE_DIR}/files/config/mimedefstype.ini
  DESTINATION ${CMAKE_CONFIG_INSTALL_PREFIX}/etc/ginga/cfg/ncl30
)

