CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE($ENV{DEPOT}/config/Tvd.cmake)

find_package( Pthreads REQUIRED )
LIST(APPEND TELEMIDIALINKS_LIBRARIES PTHREADS )

find_package( ZLIB REQUIRED )
LIST(APPEND TELEMIDIALINKS_LIBRARIES ZLIB )

find_package( JPEG REQUIRED )
LIST(APPEND TELEMIDIALINKS_LIBRARIES JPEG )

find_package( PNG REQUIRED )
LIST(APPEND TELEMIDIALINKS_LIBRARIES PNG )

find_package( DirectFB REQUIRED )
LIST(APPEND TELEMIDIALINKS_LIBRARIES DIRECTFB )

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_CONFIG_H -D_REENTRANT -DGINGA_PATH_CAGE=\\\"/\\\" -DGINGA_PENDRIVE_CAGE=\\\"/\\\"")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DHAVE_CONFIG_H -D_REENTRANT -DGINGA_PATH_CAGE=\\\"/\\\" -DGINGA_PENDRIVE_CAGE=\\\"/\\\"")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Force to build shared library
set(BUILD_SHARED_TELEMIDIALINKS 1)

Add_Lib (
	PROJECT_NAME "telemidialinks"
	PROJECT_DESCRIPTION "Telemidia-links library."
	PROJECT_VERSION 0.0.1.0
	DEPENDENCIES ${TELEMIDIALINKS_LIBRARIES}
)

