CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE($ENV{DEPOT}/config/Tvd.cmake)

SetIfEmpty(HAVE_COMPSUPPORT 0)

find_package( GingaLib 0.11.0 REQUIRED util system )
LIST(APPEND GINGACONTEXTMANAGER_LIBRARIES GINGALIB-UTIL GINGALIB-SYSTEM )

find_package( Lua51 REQUIRED )
LIST(APPEND GINGACONTEXTMANAGER_LIBRARIES LUA )

find_package( Pthreads REQUIRED )
LIST(APPEND GINGACONTEXTMANAGER_LIBRARIES PTHREADS )

Add_Lib (
	PROJECT_NAME "contextmanager"
	PROJECT_DESCRIPTION "This is the Ginga Context Manager library project."
	PROJECT_VERSION 0.0.1.0
	DEPENDENCIES ${GINGACONTEXTMANAGER_LIBRARIES}
)

# Install extra files
INSTALL(FILES 
        ${PROJECT_SOURCE_DIR}/files/users.ini
        ${PROJECT_SOURCE_DIR}/files/contexts.ini
        DESTINATION ${CMAKE_CONFIG_INSTALL_PREFIX}/etc/ginga/contextmanager
)

