CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE($ENV{DEPOT}/config/Tvd.cmake)

SetIfEmpty(HAVE_COMPSUPPORT 0)

find_package( XercesC )
LIST(APPEND GINGANCL-CONVERTER_LIBRARIES XERCESC )

find_package( GingaLib 0.11.0 REQUIRED util ncl )
LIST(APPEND GINGANCL-CONVERTER_LIBRARIES GINGALIB-UTIL GINGALIB-NCL )

Add_Lib (
	PROJECT_NAME "ncl-converter"
	PROJECT_DESCRIPTION "This is the NCL30 Converter Ginga library." 
	PROJECT_VERSION 0.11.1.0
	DEPENDENCIES ${GINGANCL-CONVERTER_LIBRARIES}
)

